style.css
* {
  padding: 0;
  margin: 0;
  font-family: Arial, Helvetica, sans-serif;
}

/* banner */
nav {
  background-image: linear-gradient(rgba(0, 0, 0, 0.6));
  width: 100%;
  height: 100vh;
  position: relative;
  overflow: hidden;
  display: flex;
  align-items: flex-start;
}

.logo {
  font-size: 28px;
  font-weight: bold;
  color: #fff;
  letter-spacing: 3px;
}
.logo svg {
  max-width: 60px;
  height: 60px;
  fill: #fff;
}

.back-video {
  position: absolute;
  right: 0;
  top: 0;
  z-index: -1;
  width: 100%;
  height: 100vh;
  object-fit: cover;
}

nav ul li {
  list-style: none;
}

.sm {
  display: none;
}

nav div {
  padding: 20px 50px;
  display: flex;
  align-items: center;
  gap: 50px;
}

nav img {
  width: 40px;
}

nav ul {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 40px;
}

nav ul a {
  text-decoration: none;
  color: white;
  text-transform: uppercase;
}

.fa-angle-right {
  border: 2px solid;
  padding: 5px 3px;
  border-radius: 100%;
}

.banner-bottom {
  position: absolute;
  bottom: 10px;
  left: 30%;
  color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: end;
  gap: 15px;
}

.span1 {
  font-size: 25px;
}
.span2 {
  font-size: 45px;
  text-transform: uppercase;
  font-weight: 600;
}
.banner-btn {
  text-transform: uppercase;
  display: flex;
  align-items: center;
  gap: 10px;
}

.banner-btn:hover {
  text-decoration: underline;
  cursor: pointer;
}

/* news */
.news-section {
  margin: 80px;
}

.news {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 100px;
}

.news-left {
  display: flex;
  flex-direction: column;
  align-items: start;
  gap: 40px;
  width: 410px;
}

.news-left h2 {
  font-size: 35px;
  text-transform: uppercase;
}
.news-desc {
  font-size: 20px;
  color: rgb(24, 24, 24);
}

.news-btn {
  font-size: 15px;
  color: rgb(24, 24, 24);
  display: flex;
  align-items: center;
  gap: 10px;
}

.news-btn:hover {
  text-decoration: underline;
  cursor: pointer;
}

.news-all {
  text-align: center;
  text-transform: uppercase;
  margin-top: 50px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 25px;
}

svg {
  border: 2px solid;
  padding: 8px;
  border-radius: 100%;
}

.fa-slash {
  font-size: 30px;
  font-weight: 100;
  transform: rotate(-45deg);
}

.dash {
  height: 1px;
  width: 70px;
  background: #000;
  opacity: 0.6;
}

/* category */
.category-section {
  background-color: #383838;
}

.category {
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: center;
  justify-content: center;
  row-gap: 100px;
  padding-bottom: 100px;
}

.category img {
  width: 100%;
  background-size: cover;
}

.categorydiv {
  position: relative;
  color: white;
}

.catdiv {
  position: absolute;
  max-width: 550px;
  bottom: -65px;
  left: 50%;
  transform: translateX(-50%);
  display: flex;
  flex-direction: column;
  gap: 15px;
  align-items: center;
  width: 90%;
}

.catspan1 {
  font-size: 25px;
}

.catspan {
  font-size: 45px;
  text-transform: uppercase;
  font-weight: 600;
  text-align: center;
}

.catbtn {
  display: flex;
  align-items: center;
  text-transform: uppercase;
  gap: 10px;
}

.catbtn:hover {
  text-decoration: underline;
  cursor: pointer;
}

svg:hover {
  border: 2px solid red;
}

/* subscribe */
.subscribe {
  background-color: #222222;
  padding: 60px;
  text-align: center;
  color: white;
}

.subscribe p {
  margin-bottom: 25px;
}

.subscribe button {
  background-image: linear-gradient(to bottom, #b01e0a, red);
  padding: 20px 80px;
  border: none;
  color: white;
  text-transform: uppercase;
}

.subscribe button:hover {
  background-image: linear-gradient(#b01e0a);
  cursor: pointer;
}

@media (max-width: 768px) {
  nav {
    overflow-x: hidden;
    background-size: cover;
    background-position: center;
    width: 100%;
    justify-content: space-between;
  }

  nav div {
    padding: 20px;
    align-items: start;
    gap: 130px;
  }

  nav img {
    width: 30px;
  }

  .sm {
    color: white;
    display: block;
    text-decoration: none;
    text-transform: uppercase;
  }

  nav ul {
    display: none;
  }

  .banner-bottom {
    left: 10%;
  }

  .span1 {
    font-size: 20px;
  }
  .span2 {
    font-size: 30px;
  }

  /* news */
  .news-section {
    margin: 40px 10px;
  }

  .news {
    flex-direction: column-reverse;
    text-align: center;
    gap: 50px;
  }

  .news-left {
    gap: 30px;
    width: 96%;
    text-align: left;
  }

  .news-right img {
    width: 98%;
  }

  .news-left h2 {
    font-size: 30px;
    text-transform: uppercase;
  }
  .news-desc {
    font-size: 18px;
    color: rgb(24, 24, 24);
  }

  .news-all {
    margin-top: 150px;
  }

  /* category */
  .category {
    grid-template-columns: 1fr;
  }

  .catspan {
    font-size: 30px;
  }

  .catspan1 {
    font-size: 20px;
  }

  .catdiv {
    max-width: 90%;
  }

  /* subscribe */
  .subscribe p {
    font-size: 18px;
  }

  .subscribe button {
    width: 100%;
  }
}

